--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 	<h1>Odin Recipes</h1>
-	<a href="./recipes/lasagna.html">Lasagna</a>
+	<ul>
+		<li><a href="./recipes/lasagna.html">Lasagna</a></li>
+		<li><a href="./recipes/roast-spatchcock-turkey.html">Roast Spatchcock Turkey</a></li>
+		<li><a href="./recipes/easy-swedish-apple-pie.html">Easy Swedish Apple Pie</a></li>
+	</ul>
 </body>
 </html>
